--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Portfolio</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <h1></h1>
-    </nav>
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="nav_container">
+        <h1>Nehal</h1>
+        <ul class="nav_links">
+          <li>Home</li>
+          <li>Contact</li>
+          <li><button class="btn">Login</button></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
