about-us & card-section done

--- a/index.html
+++ b/index.html
@@ -7,15 +7,102 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <!-- Header start -->
     <header class="header">
+      <!-- Nav start -->
       <nav class="nav_container">
-        <h1>Nehal</h1>
+        <h1>Neh<span>a</span>l</h1>
         <ul class="nav_links">
           <li>Home</li>
           <li>Contact</li>
           <li><button class="btn">Login</button></li>
         </ul>
       </nav>
+      <!-- Nav End -->
+
+      <div class="Header_container">
+        <div class="header_info">
+          <h2>Hi, I am</h2>
+          <h1>Ahsanul Haque</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+            deserunt!
+          </p>
+          <div class="header_btn">
+            <button class="btn">Download CV</button>
+            <button class="btn">Contact</button>
+          </div>
+        </div>
+
+        <div class="header_img">
+          <img src="./Image/header-image.jpg" alt="header-image" />
+        </div>
+      </div>
     </header>
+    <!-- Header End -->
+
+    <!-- About Section start  -->
+    <section class="about_us">
+      <h2>About us</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero unde
+        pariatur ducimus molestias dolores dignissimos praesentium. Doloremque ducimus molestias dolores dignissimos praesentium.
+        voluptatem officia dolorem.
+      </p>
+      <div class="about_details">
+        <blog><span>name:</span><br />Ahsanul Haque</blog>
+        <blog><span>email:</span><br />info@gmail.com</blog>
+        <blog><span>Date of birth:</span><br />29 October 1997</blog>
+        <blog><span>From:</span><br />Sreemangal</blog>
+      </div>
+    </section>
+    <!-- About Section End  -->
+
+    <!-- Card Section start  -->
+    <section class="card_section">
+      <div class="card_heading">
+        <h2>What i do</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero unde
+          pariatur ducimus molestias dolores dignissimos praesentium. amet consectetur adipisicing elit. Nulla
+          commodi eos dolor mollitia enim vitae, laboriosam fugit?Doloremque
+        </p>
+      </div>
+      <div class="card_container">
+        <div class="card">
+          <img src="./Image/Js.png" alt="js" />
+          <h4>Venilla Js</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            commodi eos dolor mollitia enim vitae, laboriosam fugit?
+          </p>
+        </div>
+        <div class="card">
+          <img src="./Image/node.png" alt="js" />
+          <h4>Node Js</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            commodi eos dolor mollitia enim vitae, laboriosam fugit? 
+          </p>
+        </div>
+        <div class="card">
+          <img src="./Image/react.png" alt="js" />
+          <h4>React Js</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            commodi eos dolor mollitia enim vitae, laboriosam fugit?
+          </p>
+        </div>
+        <div class="card">
+          <img src="./Image/mongo.png" alt="js" />
+          <h4>Mongo BD</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            commodi eos dolor mollitia enim vitae, laboriosam fugit?
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Card Section End  -->
   </body>
 </html>
