summary section complete

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <h2>About us</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero unde
-        pariatur ducimus molestias dolores dignissimos praesentium. Doloremque ducimus molestias dolores dignissimos praesentium.
-        voluptatem officia dolorem.
+        pariatur ducimus molestias dolores dignissimos praesentium. Doloremque
+        ducimus molestias dolores dignissimos praesentium. voluptatem officia
+        dolorem.
       </p>
       <div class="about_details">
         <blog><span>name:</span><br />Ahsanul Haque</blog>
@@ -64,8 +65,9 @@
         <h2>What i do</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero unde
-          pariatur ducimus molestias dolores dignissimos praesentium. amet consectetur adipisicing elit. Nulla
-          commodi eos dolor mollitia enim vitae, laboriosam fugit?Doloremque
+          pariatur ducimus molestias dolores dignissimos praesentium. amet
+          consectetur adipisicing elit. Nulla commodi eos dolor mollitia enim
+          vitae, laboriosam fugit?Doloremque
         </p>
       </div>
       <div class="card_container">
@@ -82,7 +84,7 @@
           <h4>Node Js</h4>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
-            commodi eos dolor mollitia enim vitae, laboriosam fugit? 
+            commodi eos dolor mollitia enim vitae, laboriosam fugit?
           </p>
         </div>
         <div class="card">
@@ -104,5 +106,73 @@
       </div>
     </section>
     <!-- Card Section End  -->
+
+    <!-- summary section start  -->
+    <section class="summary">
+      <h2>A summary of my resume</h2>
+      <div class="summary_container">
+        <div class="summary_info">
+          <h3>My Education</h3>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+        </div>
+        <div class="summary_info">
+          <h3>My Education</h3>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- summary section End  -->
   </body>
 </html>
