--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="card_container">
         <div class="card">
-          <img src="./Image/Js.png" alt="js" />
+          <img src="./Image/js.png" alt="js" />
           <h4>Venilla Js</h4>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
