some bugs fixed

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
             <button class="btn">Contact</button>
           </div>
         </div>
-
-        <div class="header_img">
-          <img src="./Image/header-image.jpg" alt="header-image" />
-        </div>
+        <img class="header_img" src="./Image/nehal.png" alt="header-image" />
       </div>
     </header>
     <!-- Header End -->
@@ -121,14 +118,7 @@
               repellat itaque, odio exercitationem quisquam provident.
             </p>
             <br />
-          </div>
-          <div class="summary_edu_info">
-            <h4>BSE in Computer Engineering</h4>
-            <h5>Daffodil university | 2018-2021</h5>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
-              repellat itaque, odio exercitationem quisquam provident.
-            </p>
+            <hr />
             <br />
           </div>
           <div class="summary_edu_info">
@@ -138,6 +128,19 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
               repellat itaque, odio exercitationem quisquam provident.
             </p>
+            <br />
+            <hr />
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+            <hr />
             <br />
           </div>
         </div>
@@ -151,14 +154,7 @@
               repellat itaque, odio exercitationem quisquam provident.
             </p>
             <br />
-          </div>
-          <div class="summary_edu_info">
-            <h4>BSE in Computer Engineering</h4>
-            <h5>Daffodil university | 2018-2021</h5>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
-              repellat itaque, odio exercitationem quisquam provident.
-            </p>
+            <hr />
             <br />
           </div>
           <div class="summary_edu_info">
@@ -168,6 +164,19 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
               repellat itaque, odio exercitationem quisquam provident.
             </p>
+            <br />
+            <hr />
+            <br />
+          </div>
+          <div class="summary_edu_info">
+            <h4>BSE in Computer Engineering</h4>
+            <h5>Daffodil university | 2018-2021</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+              repellat itaque, odio exercitationem quisquam provident.
+            </p>
+            <br />
+            <hr />
             <br />
           </div>
         </div>
